# Embarcados-Praticas

./: .gitattributes  .gitignore  COMANDOS_SISTEMA.md  ECONOMIA_ENERGIA.md  IRRIGACAO_INTELIGENTE.txt  MQTT_TOPICS.txt  PERIODO_LEITURA_DINAMICO.md  README.md  test_irrigation.py  test_system_commands.py
main/: CMakeLists.txt  dht11_sensor.c  dht11_sensor.h  main.c  mqtt_manager.c  ntp_sync.c  plant_config.c  plant_config.h  power_manager.c  power_manager.h  soil_moisture.c  soil_moisture.h  solenoid.c  solenoid.h  system_commands.c  system_commands.h  uv_sensor.c  uv_sensor.h
main/certs/: 376f19f7d489fd831039a918bc7a9ec29a363566a92e0c10b4fc5b0f69aa345f-certificate.pem.crt
main/certs/temp/: 784b1c21017ae276cbea71bc6b3ed0d1fa6377bb594ee4094f9271ff367ecc3e-public.pem.key
